--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@ body {
 ul,
 ol {
   list-style-type: none;
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 img {
   display: block;
@@ -26,7 +26,7 @@ h4,
 h5,
 h6,
 p {
-margin: 0;
+  margin: 0;
 }
 .container {
   width: 1158px;
@@ -34,21 +34,21 @@ margin: 0;
   margin: 0 auto;
 }
 
-.page-header {  
-border-bottom: 1px solid #e7e9fc;
+.page-header {
+  border-bottom: 1px solid #e7e9fc;
 }
 .page-header .container {
   display: flex;
-      align-items: center;
+  align-items: center;
 }
 .header-nav {
   display: flex;
-    align-items: center;
+  align-items: center;
 }
-    .header-nav a  {
-    display: inline-block;
-      padding-top: 24px;
-  padding-bottom: 24px;    
+.header-nav a {
+  display: inline-block;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 .logo {
   font-family: "Raleway", sans-serif;
@@ -97,8 +97,16 @@ nav span {
 }
 .hero {
   background: #2e2f42;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-bg.jpg);
   padding-top: 188px;
   padding-bottom: 188px;
+  width: 1440px;
+margin-left: auto;
+margin-right: auto;
 }
 .hero-title {
   font-size: 56px;
@@ -108,7 +116,7 @@ nav span {
   color: #fff;
   max-width: 496px;
   margin: 0 auto;
-    margin-bottom: 48px;
+  margin-bottom: 48px;
 }
 .hero-button {
   font-family: "Roboto", sans-serif;
@@ -123,11 +131,11 @@ nav span {
   padding: 16px 32px;
   display: block;
   margin: 0 auto;
-border: none;
-min-width: 169px;
-height: 56px;
-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-background: #4d5ae5;
+  border: none;
+  min-width: 169px;
+  height: 56px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background: #4d5ae5;
 }
 .hero-button:hover {
   background-color: #404bbf;
@@ -140,7 +148,7 @@ background: #4d5ae5;
   padding-bottom: 120px;
 }
 .visually-hidden {
-    position: absolute;
+  position: absolute;
   width: 1px;
   height: 1px;
   margin: -1px;
@@ -149,14 +157,14 @@ background: #4d5ae5;
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
-  overflow: hidden
+  overflow: hidden;
 }
 .work-list {
   display: flex;
-  gap: 24px;  
+  gap: 24px;
 }
 .work-item {
-width: calc((100% - 72px) / 4);
+  width: calc((100% - 72px) / 4);
 }
 .work-item-title {
   font-weight: 500;
@@ -191,18 +199,19 @@ width: calc((100% - 72px) / 4);
   margin-bottom: 72px;
 }
 .team-item {
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-background: #fff;
-border-radius: 0 0 4px 4px;
-width: calc((100% - 72px) / 4);   
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  background: #fff;
+  border-radius: 0 0 4px 4px;
+  width: calc((100% - 72px) / 4);
 }
 
 .team-container {
-display: flex;
-align-items: center;
-justify-content: center;
-flex-direction: column;
-padding: 32px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 32px 0;
 }
 .team-item-title {
   font-size: 20px;
@@ -226,7 +235,7 @@ padding: 32px 0;
   padding-bottom: 120px;
 }
 .portfolio-title {
-  font-weight: 700;   
+  font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
@@ -236,14 +245,14 @@ padding: 32px 0;
   margin-bottom: 72px;
 }
 .portfolio-list {
-    display: flex; 
-    flex-wrap: wrap;
-    column-gap: 24px;
-    row-gap: 48px;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
 }
 .portfolio-item {
   background: #fff;
-  width: calc((100% - 48px) / 3 );   
+  width: calc((100% - 48px) / 3);
 }
 .portfolio-item-title {
   font-weight: 500;
@@ -255,13 +264,13 @@ padding: 32px 0;
 }
 .portfolio-container {
   border-bottom: 1px solid #e7e9fc;
-border-left: 1px solid #e7e9fc;
-border-right: 1px solid #e7e9fc;
-padding: 32px 16px;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+  padding: 32px 16px;
 }
 .portfolio-item-text {
   font-size: 16px;
-  line-height: 1.5; 
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
 }
@@ -286,7 +295,6 @@ padding: 32px 16px;
   color: #f4f4fd;
 }
 .footer-text {
-
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
