--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ p {
   padding-top: 24px;
   padding-bottom: 24px;
 }
+
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -104,7 +105,7 @@ nav span {
     url(../images/hero-bg.jpg);
   padding-top: 188px;
   padding-bottom: 188px;
-  width: 1440px;
+  max-width: 1440px;
 margin-left: auto;
 margin-right: auto;
 }
@@ -229,6 +230,25 @@ margin-right: auto;
   letter-spacing: 0.02em;
   text-align: center;
   color: #434455;
+  margin-bottom: 8px;
+}
+.icon-list {
+display: flex;
+justify-content: center;
+gap: 24px;
+}
+.icon-item {
+width: 40px;
+height: 40px;
+}
+.icon-link {
+width: 100%;
+height: 100%;
+background-color: #4d5ae5;
+border-radius: 50%;
+display: flex;
+align-items: center;
+justify-content: center;
 }
 .portfolio {
   padding-top: 120px;
