--- a/css/style.css
+++ b/css/style.css
@@ -322,3 +322,36 @@ justify-content: center;
   max-width: 264px;
   margin-bottom: 0 auto;
 }
+.footer-sm {
+
+}
+.footer-sm-title {
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #fff;
+  display: inline-block;
+  margin-bottom: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.footer-sm-list {
+  display: flex;
+justify-content: center;
+gap: 16px;
+}
+.footer-sm-item {
+  width: 40px;
+height: 40px; 
+}
+.footer-sm-link {
+  width: 100%;
+height: 100%;
+background-color: #4d5ae5;
+border-radius: 50%;
+display: flex;
+justify-content: center;
+align-items: center;
+}
