--- a/css/style.css
+++ b/css/style.css
@@ -106,8 +106,8 @@ nav span {
   padding-top: 188px;
   padding-bottom: 188px;
   max-width: 1440px;
-margin-left: auto;
-margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 .hero-title {
   font-size: 56px;
@@ -233,22 +233,25 @@ margin-right: auto;
   margin-bottom: 8px;
 }
 .icon-list {
-display: flex;
-justify-content: center;
-gap: 24px;
+  display: flex;
+  justify-content: center;
+  gap: 24px;
 }
 .icon-item {
-width: 40px;
-height: 40px;
+  width: 40px;
+  height: 40px;
 }
 .icon-link {
-width: 100%;
-height: 100%;
-background-color: #4d5ae5;
-border-radius: 50%;
-display: flex;
-align-items: center;
-justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.icon-image {
+  fill: transparent;
 }
 .portfolio {
   padding-top: 120px;
@@ -273,6 +276,10 @@ justify-content: center;
 .portfolio-item {
   background: #fff;
   width: calc((100% - 48px) / 3);
+}
+.portfolio-item:hover{
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+background: #fff;
 }
 .portfolio-item-title {
   font-weight: 500;
@@ -323,14 +330,13 @@ justify-content: center;
   margin-bottom: 0 auto;
 }
 .footer-sm {
-
 }
 .footer-sm-title {
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #fff;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
   display: inline-block;
   margin-bottom: 16px;
   display: flex;
@@ -339,19 +345,25 @@ color: #fff;
 }
 .footer-sm-list {
   display: flex;
-justify-content: center;
-gap: 16px;
+  justify-content: center;
+  gap: 16px;
 }
 .footer-sm-item {
   width: 40px;
-height: 40px; 
+  height: 40px;
 }
 .footer-sm-link {
   width: 100%;
-height: 100%;
-background-color: #4d5ae5;
-border-radius: 50%;
-display: flex;
-justify-content: center;
-align-items: center;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer-sm-icon {
+  /* fill: transparent; */
+}
+.footer-sm-link:hover {
+  background-color: #31d0aa;
 }
