--- a/css/style.css
+++ b/css/style.css
@@ -351,15 +351,16 @@ background: #fff;
   margin-bottom: 0 auto;
 }
 .footer-sm {
+  
 }
-.footer-sm-title {
+.footer-sm-text {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #fff;
   display: inline-block;
-  margin-bottom: 16px;
+   margin-bottom: 16px;
   display: flex;
   align-items: center;
   justify-content: center;
