--- a/css/style.css
+++ b/css/style.css
@@ -327,7 +327,10 @@ background: #fff;
   padding-top: 100px;
   padding-bottom: 100px;
 }
-
+.footer-wrapper {
+  display: flex;
+ 
+}
 .footer-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -351,7 +354,7 @@ background: #fff;
   margin-bottom: 0 auto;
 }
 .footer-sm {
-  
+margin-left: 120px;
 }
 .footer-sm-text {
   font-weight: 500;
