--- a/css/style.css
+++ b/css/style.css
@@ -329,7 +329,10 @@ background: #fff;
 }
 .footer-wrapper {
   display: flex;
- 
+
+}
+.ws-container {
+margin-right: 120px;
 }
 .footer-logo {
   font-family: "Raleway", sans-serif;
@@ -354,7 +357,7 @@ background: #fff;
   margin-bottom: 0 auto;
 }
 .footer-sm {
-margin-left: 120px;
+
 }
 .footer-sm-text {
   font-weight: 500;
