--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ nav span {
   letter-spacing: 0.02em;
   color: #2e2f42;
   padding: 24px 0;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .nav-link.current {
   position: relative;
@@ -388,6 +388,10 @@ margin-right: 120px;
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-sm-link:hover {
+  
 }
 .footer-sm-icon {
   /* fill: transparent; */
