--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,10 @@ nav span {
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-title {
   font-size: 56px;
@@ -284,8 +288,8 @@ margin-bottom: 8px;
   align-items: center;
   justify-content: center;
 }
-.icon-image {
-  fill: transparent;
+.team-sm-icon {
+  fill: #F4F4FD;
 }
 .portfolio {
   padding-top: 120px;
