--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,7 @@ nav span {
   height: 56px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-button:hover {
   background-color: #404bbf;
@@ -201,6 +202,7 @@ border-radius: 4px;
 height: 112px;
 background-color: #f4f4fd;
 margin-bottom: 8px;
+border: 1px solid #8e8f99;
 }
 .work-icon {
 
