--- a/css/style.css
+++ b/css/style.css
@@ -316,10 +316,35 @@ border: 1px solid #8e8f99;
 .portfolio-item {
   background: #fff;
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-item:hover{
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 background: #fff;
+transform: translateY(0);
+}
+.image-animations {
+position: relative;
+overflow: hidden;
+}
+.image-animations-text {
+position: absolute;
+top: 0;
+left: 0;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #f4f4fd;
+padding: 40px 32px;
+background-color: #4d5ae5;
+height: 100%;
+width: 100%;
+transform: translateY(100%);
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.portfolio-item:hover .image-animations-text {
+  transform: translateY(0%);
 }
 .portfolio-item-title {
   font-weight: 500;
