--- a/css/style.css
+++ b/css/style.css
@@ -343,7 +343,7 @@ transform: translateY(100%);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
-.portfolio-item:hover .image-animations-text {
+.portfolio-item:hover .image-animation-text {
   transform: translateY(0%);
 }
 .portfolio-item-title {
