--- a/css/style.css
+++ b/css/style.css
@@ -289,6 +289,13 @@ border: 1px solid #8e8f99;
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icon-link:hover {
+  background-color: #404bbf;
+}
+.icon-link:focus {
+  background-color: #404bbf; 
 }
 .team-sm-icon {
   fill: #F4F4FD;
